[tool.poetry]
name = "breeze"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "breeze", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
jinja2 = "^3.1.3"
dag-factory = "^0.19.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
